testsuite/invalid-types/op.qc
void() main = {
	local float x, y;
	local entity e;
	x = y + e;
};
